--- a/manuscript-main.Rmd
+++ b/manuscript-main.Rmd
@@ -51,7 +51,6 @@ See also: http://www.pnascentral.org/html/pnas_length_estimate_instructions.html
 
 # library(ggplot2)
 # library(maps)
-# library(readr)
 
 
 # library(raster)
@@ -59,17 +58,18 @@ See also: http://www.pnascentral.org/html/pnas_length_estimate_instructions.html
 library(tidyr)
 library(dplyr)
 library(stringr)
+library(readr)
 
 # dir_N <- c('Windows' = '//neptune.nceas.ucsb.edu/data_edit',
 #            'Darwin'  = '/Volumes/data_edit',
 #            'Linux'   = '/var/data/ohi')[[ Sys.info()[['sysname']] ]]
 
 # dir_anx  <- file.path(dir_N, 'git-annex/globalprep/SPP_ICO')
-# dir_data <- file.path(dir_N, 'git-annex/globalprep/_raw_data')
-# dir_fig  <- file.path(getwd(), 'figures')
 
 if(basename(getwd()) != 'IUCN-AquaMaps') setwd('~/github/IUCN-AquaMaps')
 
+dir_data <- 'data'
+dir_fig  <- 'figures'
 
 ```
 
@@ -78,22 +78,21 @@ if(basename(getwd()) != 'IUCN-AquaMaps') setwd('~/github/IUCN-AquaMaps')
 ### filters out presence = Extinct from IUCN cells.
 
 data_file <- 'data/spp_list_w_area_trimmed.csv'
-spp_map_pairs <- read.csv(data_file, stringsAsFactors = FALSE)
-spp_map_pairs <- read.csv(data_file, stringsAsFactors = FALSE) 
+spp_map_pairs <- read_csv(data_file)
 ### NOTE: as of Jan 31, includes all map pairs, even ones where IUCN area == 0
 
 ### generate other lists
 spp_all_file <- 'data/spp_all.csv'
-spp_all <- read.csv(spp_all_file, stringsAsFactors = FALSE)
+spp_all <- read_csv(spp_all_file)
 
 # iucn_marine_file <- 'data/spp_iucn_marine.csv'
-# spp_iucn_marine <- read.csv(iucn_marine_file, stringsAsFactors = FALSE) 
+# spp_iucn_marine <- read_csv(iucn_marine_file) 
 
 iucn_maps_file <- 'data/spp_iucn_maps.csv'
-spp_iucn_maps <- read.csv(iucn_maps_file, stringsAsFactors = FALSE)
+spp_iucn_maps <- read_csv(iucn_maps_file)
 
 spp_am_file <- 'data/spp_am.csv'
-spp_am <- read.csv(spp_am_file, stringsAsFactors = FALSE)
+spp_am <- read_csv(spp_am_file)
 
 ```
 
